<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/display_calc_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="solarsitingucsc.smartsolarsiting.Controller.DisplayCalculationsActivity">

    <!--<Button-->
        <!--android:id="@+id/cam_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Button"-->
        <!--tools:layout_editor_absoluteX="278dp"-->
        <!--tools:layout_editor_absoluteY="16dp" />-->

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:src="@android:drawable/ic_menu_camera" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:translationZ="2dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/resultsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:text="@string/results"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/janTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resultsTxt"
        android:layout_alignStart="@+id/resultsTxt"
        android:layout_below="@+id/resultsTxt"
        android:layout_marginTop="30dp"
        android:text="@string/jan" />

    <TextView
        android:id="@+id/febTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/janTxt"
        android:layout_alignStart="@+id/janTxt"
        android:layout_below="@+id/janTxt"
        android:layout_marginTop="20dp"
        android:text="@string/feb" />

    <TextView
        android:id="@+id/marTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/febTxt"
        android:layout_alignStart="@+id/febTxt"
        android:layout_below="@+id/febTxt"
        android:layout_marginTop="20dp"
        android:text="@string/mar" />

    <TextView
        android:id="@+id/aprTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/marTxt"
        android:layout_alignStart="@+id/marTxt"
        android:layout_below="@+id/marTxt"
        android:layout_marginTop="20dp"
        android:text="@string/apr" />

    <TextView
        android:id="@+id/mayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aprTxt"
        android:layout_alignStart="@+id/aprTxt"
        android:layout_below="@+id/aprTxt"
        android:layout_marginTop="20dp"
        android:text="@string/may" />

    <TextView
        android:id="@+id/junTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mayTxt"
        android:layout_alignStart="@+id/mayTxt"
        android:layout_below="@+id/mayTxt"
        android:layout_marginTop="20dp"
        android:text="@string/jun" />

    <TextView
        android:id="@+id/julTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/junTxt"
        android:layout_alignStart="@+id/junTxt"
        android:layout_below="@+id/junTxt"
        android:layout_marginTop="20dp"
        android:text="@string/jul" />

    <TextView
        android:id="@+id/augTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/julTxt"
        android:layout_alignRight="@+id/julTxt"
        android:layout_below="@+id/julTxt"
        android:layout_marginTop="20dp"
        android:text="@string/aug" />

    <TextView
        android:id="@+id/sepTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/augTxt"
        android:layout_alignStart="@+id/augTxt"
        android:layout_below="@+id/augTxt"
        android:layout_marginTop="20dp"
        android:text="@string/sep" />

    <TextView
        android:id="@+id/octTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sepTxt"
        android:layout_alignStart="@+id/sepTxt"
        android:layout_below="@+id/sepTxt"
        android:layout_marginTop="20dp"
        android:text="@string/oct" />

    <TextView
        android:id="@+id/novTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/octTxt"
        android:layout_alignStart="@+id/octTxt"
        android:layout_below="@+id/octTxt"
        android:layout_marginTop="20dp"
        android:text="@string/nov" />

    <TextView
        android:id="@+id/decTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/novTxt"
        android:layout_alignStart="@+id/novTxt"
        android:layout_below="@+id/novTxt"
        android:layout_marginTop="20dp"
        android:text="@string/dec" />

    <TextView
        android:id="@+id/annualTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/janTxt"
        android:layout_marginLeft="89dp"
        android:layout_marginStart="89dp"
        android:layout_toEndOf="@+id/resultsTxt"
        android:layout_toRightOf="@+id/resultsTxt"
        android:text="@string/annual" />

    <TextView
        android:id="@+id/janKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/janTxt"
        android:layout_toRightOf="@+id/janTxt"
        android:layout_alignBottom="@+id/janTxt" />

    <TextView
        android:id="@+id/febKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/janKwTxt"
        android:layout_alignStart="@+id/janKwTxt"
        android:layout_below="@+id/janKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/marKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/febKwTxt"
        android:layout_alignStart="@+id/febKwTxt"
        android:layout_below="@+id/febKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/aprKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/marKwTxt"
        android:layout_alignStart="@+id/marKwTxt"
        android:layout_below="@+id/marKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/mayKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aprKwTxt"
        android:layout_alignStart="@+id/aprKwTxt"
        android:layout_below="@+id/aprKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/junKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mayKwTxt"
        android:layout_alignStart="@+id/mayKwTxt"
        android:layout_below="@+id/mayKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/julKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/junKwTxt"
        android:layout_alignStart="@+id/junKwTxt"
        android:layout_below="@+id/junKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/augKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/julKwTxt"
        android:layout_alignStart="@+id/julKwTxt"
        android:layout_below="@+id/julKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/sepKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/augKwTxt"
        android:layout_alignStart="@+id/augKwTxt"
        android:layout_below="@+id/augKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/octKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sepKwTxt"
        android:layout_alignStart="@+id/sepKwTxt"
        android:layout_below="@+id/sepKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/novKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/octKwTxt"
        android:layout_alignStart="@+id/octKwTxt"
        android:layout_below="@+id/octKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/decKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/novKwTxt"
        android:layout_alignStart="@+id/novKwTxt"
        android:layout_below="@+id/novKwTxt"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/annualKwTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/annualTxt"
        android:layout_toRightOf="@+id/annualTxt"
        android:layout_alignBottom="@+id/annualTxt"  />

</RelativeLayout>
