<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="255dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/InputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="42dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingBottom="15dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/InputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="42dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/InputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="42dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:textSize="17sp" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="42dp"
            android:background="@null"
            android:paddingTop="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>